[metadata]
name = pydockercompose
version = 0.0.5
author = Anas Dadi
author_email = dadi.anas@hotmail.fr
description = Package to generate docker compose files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DadiAnas/pydockercompose
project_urls =
    Bug Tracker = https://github.com/DadiAnas/pydockercompose/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src